# Gas-Kinetic-Scheme

./: .gitignore  CMakeLists.txt  GKS.sln  GKS.tss  GKS.vcxproj  GKS.vcxproj.filters  LICENSE
Gas-Kinetic-Scheme/cmake/Boost/: Link.cmake
Gas-Kinetic-Scheme/cmake/general/: LanguageFileTypes.cmake
Gas-Kinetic-Scheme/src/applications/libgks/: CMakeLists.txt
Gas-Kinetic-Scheme/src/applications/main/: main.cpp
Gas-Kinetic-Scheme/src/libgks/: libgks_Export.h
Gas-Kinetic-Scheme/src/libgks/Analyzer/: FaceAnalyzer.cpp
Gas-Kinetic-Scheme/src/libgks/Boundary/: BoundaryCondition.h
Gas-Kinetic-Scheme/src/libgks/GKSSolver/: GKSSolver.cpp  GKSSolver.h  GKSSolverPush.cpp  GKSSolverPush.h
Gas-Kinetic-Scheme/src/libgks/Reader/: paramReader.cpp  paramReader.h
Gas-Kinetic-Scheme/src/libgks/Util/: CMakePackage.cmake
Gas-Kinetic-Scheme/src/libgks/Writer/: outputWriter.h
cmake/OpenMP/: OpenMPCFlags.cmake
cmake/general/: FileUtilities.cmake  LibUtilities.cmake
doc/: ChapmanEnskog2NSE.tex  documentation.tex  solverDescription.tex
msh/: Channel.msh  ChannelCoarse.msh  Cylinder.msh  CylinderChannel.msh  CylinderChannelQuad.msh  CylinderChannelQuadFine.msh  CylinderFreeQuadFine.msh  CylinderInletOutletIsothermalWallQuadFine.msh  CylinderInletOutletWallQuadFine.msh  CylinderTri.msh  MiniSquare  MiniSquare.msh  Square256.msh  SquareQuadGraded32.msh  SquareQuadGradedPeriodicGhostIsothermalWall32.msh  SquareQuadGradedPeriodicIsothermalWall32.msh  SquareTri72.msh
msh/Channel/: Channel_64x32.msh
msh/TurekBenchmark/: TurekBenchmark.mesh.4.gksanalyze  TurekBenchmark.mesh.4.msh  TurekBenchmark.mesh.coarse.gksbc  TurekBenchmark.mesh.fine.gksbc  TurekBenchmark.mesh.fine.msh  TurekBenchmark.mesh.medium.gksbc  TurekBenchmark.mesh.tri.gksanalyze  TurekBenchmark.mesh.tri.msh  TurekBenchmark2G.mesh.3.gksbc  TurekBenchmark2G.mesh.3.msh
msh/TurekPeriodic/: TurekPeriodic.mesh.gksbc  TurekPeriodic.mesh.msh
src/: BoundaryCondition.cpp  BoundaryCondition.h  Cell.cpp  Cell.h  CompressibleInterface.cpp  CompressibleInterface.h  FaceAnalyzer.cpp  FaceAnalyzer.h  GKSMesh.cpp  GKSMesh.h  GKSSolver.cpp  GKSSolver.h  GKSSolverAOS.cpp  GKSSolverAOS.h  GKSSolverPull.cpp  GKSSolverPull.h  GKSSolverPush.cpp  GKSSolverPush.h  GKSSolverSOA.cpp  GKSSolverSOA.h  IncompressibleInterface.cpp  IncompressibleInterface.h  Interface.cpp  Interface.h  InterfaceBC.cpp  InterfaceBC.h  Types.h  main.cpp  main.cpp~RFf629f1.TMP  mshReader.cpp  mshReader.h  outputWriter.cpp  outputWriter.h  paramReader.cpp  paramReader.h
src/applications/main/: CMakeLists.txt
src/libgks/: CMakePackage.cmake
src/libgks/Analyzer/: FaceAnalyzer.h
src/libgks/Boundary/: BoundaryCondition.cpp
src/libgks/Reader/: mshReader.cpp  mshReader.h
src/libgks/Writer/: outputWriter.cpp
